added logo in homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
   <div class="container">
+    <img src="./logo.webp" alt="" srcset="">
     <h1 class="underline">Triumph UAT</h1>
     <ul>
       <li><span id="days">0</span>days</li>
@@ -27,7 +28,7 @@
     var minutesElement = document.querySelector("#minutes");
     var secondsElement = document.querySelector("#seconds");
     var containerElement = document.querySelector(".container");
-    var endDate = "2024/04/30";
+    var endDate = "2024/04/29 19:00:00";
 
     var myCountDown = new ysCountDown(endDate, function (remaining, finished) {
 
